# scatter-net

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/legacy/: mod.rs  terminate.rs
src/legacy/interaction/: mod.rs
src/legacy/interaction/implementations/: stream.rs  terminate.rs
src/legacy/interaction/methods/: get_peer.rs  init.rs  mod.rs  process.rs  read_packet.rs  send_bytes.rs  send_packet.rs
src/legacy/net/: mod.rs
src/legacy/net/config/: mod.rs
src/legacy/net/implementations/: async_store.rs  debug.rs  mod.rs  terminate.rs
src/legacy/net/methods/: accept_loop.rs  connect_to.rs  fetch_blob.rs  fetch_encrypted_chunk.rs  get_lake.rs  get_node_id.rs  get_peer_groups.rs  get_state.rs  handle_incomming_connection.rs  init.rs  init_peer.rs  init_peer_groups.rs  mod.rs  put_blob.rs  put_encrypted.rs  put_raw.rs
src/legacy/net/types/: mod.rs  state.rs
src/legacy/packet/: mod.rs
src/legacy/packet/methods/: from_bytes.rs  mod.rs  process.rs  to_bytes.rs
src/legacy/packet/variants/: fetch_request.rs  mod.rs  put_request.rs  put_response.rs
src/legacy/peer/: mod.rs
src/legacy/peer/implementations/: display.rs  drop.rs  mod.rs  terminate.rs
src/legacy/peer/methods/: accept_connection.rs  begin_interaction.rs  fetch_blob.rs  get_state.rs  init.rs  is_available.rs  listen.rs  listen_bi.rs  listen_dg.rs  listen_uni.rs  mod.rs  net.rs  node_id.rs  ping.rs  put_blob.rs  replace_connection.rs  select_peer_group.rs  send_datagram.rs
src/legacy/peer/types/: mod.rs  usage.rs
src/legacy/peer_group/: mod.rs
src/legacy/peer_group/implementations/: display.rs  terminate.rs
src/legacy/peer_group/methods/: get_peer_by_hash.rs  get_rtt_cap_ms.rs  has_peer.rs  init.rs  insert_peer.rs  is_open.rs  mod.rs
src/legacy/protocol/: mod.rs
src/legacy/protocol/implementations/: deref.rs  mod.rs  protocol_handler.rs
src/legacy/utils/: distance.rs  mod.rs  spawn_and_forget.rs
src/scatter_net/: constants.rs  error_code.rs  mod.rs  terminate.rs
src/scatter_net/fetch/: error.rs  mod.rs
src/scatter_net/fetch/implementations/: deref.rs  future.rs  mod.rs
src/scatter_net/fetch/inner/: mod.rs  readonly.rs  writable.rs
src/scatter_net/fetch/methods/: from_inner.rs  from_inner_rwt.rs
src/scatter_net/interaction/: mod.rs
src/scatter_net/interaction/implementations/: async_store.rs  deref.rs  mod.rs  stream.rs
src/scatter_net/interaction/inner/: mod.rs  readonly.rs  writable.rs
src/scatter_net/interaction/methods/: from_inner.rs  from_inner_rwt.rs  init.rs  listen.rs  mod.rs  process.rs  read_packet.rs  send_bytes.rs
src/scatter_net/net/: mod.rs
src/scatter_net/net/config/: mod.rs
src/scatter_net/net/implementations/: async_store.rs  deref.rs  mod.rs  protocol_handler.rs  store.rs  terminate.rs
src/scatter_net/net/methods/: accept_connection.rs  accept_loop.rs  connect_to.rs  export_config.rs  export_state.rs  fetch_blob.rs  fetch_encrypted_chunk.rs  from_inner.rs  from_inner_rwt.rs  get_peer.rs  get_peer_groups.rs  handle_incomming_connection.rs  init.rs  init_peer.rs  init_peer_groups.rs  (+8 more)
src/scatter_net/packet/: mod.rs
src/scatter_net/peer/: mod.rs
src/scatter_net/peer_group/: mod.rs
src/scatter_net/put/: error.rs  mod.rs
src/scatter_net/utils/: mod.rs
(+107 files in other folders)
