[package]
name = "scatter-net"
version = "0.1.0-1"
edition = "2021"
description = "Secure data sharing library for peer-to-peer systems"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bitcode = { version = "0.6.6", features = ["serde"] }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = "0.4.41"
iroh = { version = "0.34.1", features = [
  "discovery-local-network",
  "discovery-pkarr-dht",
] }
n0-future = "0.1.3"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
ps-buffer = "0.1.0-19"
ps-cypher = "0.1.0-19"
ps-datachunk = "0.1.0-24"
ps-datalake = "0.1.0-4"
ps-deflate = "0.1.0-14"
ps-hash = "0.1.0-15"
ps-hkey = "0.1.0-16"
ps-promise = "0.1.0-3"
ps-range = "0.1.0-2"
ps-str = "0.1.0-2"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.2"
toml = "0.8.22"
uuid = { version = "1.16.0", features = ["serde", "v7"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
