[package]
name = "scatter-net"
version = "0.1.0-2"
edition = "2021"
description = "Secure data sharing library for peer-to-peer systems"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
bitcode = { version = "0.6.7", features = ["serde"] }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = "0.4.41"
iroh = { version = "0.95.1", features = [
  "discovery-local-network",
  "discovery-pkarr-dht",
] }
n0-error = "0.1.2"
n0-future = "0.2.0"
parking_lot = { version = "0.12.4", features = ["arc_lock"] }
ps-buffer = "0.1.0-20"
ps-cypher = "0.1.0-22"
ps-datachunk = "0.1.0-30"
ps-datalake = "0.1.0-13"
ps-deflate = "0.1.0-15"
ps-hash = "0.1.0-18"
ps-hkey = "0.1.0-26"
ps-promise = "0.1.0-10"
ps-range = "0.1.0-2"
ps-rwt = "0.1.0-1"
ps-str = "0.1.0-2"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = "1.47.1"
toml = "0.9.5"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
